# django-vue3-template

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  commitlint.config.js  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  manage.py  pyproject.toml  report_coverage.bat
backend/api/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/api/fixtures/: base.yaml
backend/api/management/commands/: printurls.py
backend/api/migrations/: 0001_initial.py
backend/api/tests/: test_command_printurls.py
backend/backend/: db.sqlite3  urls.py  utils.py
backend/backend/settings/: dev.py  prod.py
frontend/: .env.development  .env.production  .eslintrc.cjs  .gitignore  .prettierrc.js  README.md  codecept.conf.ts  env.d.ts  index.html  package-lock.json  package.json  plotly.js-basic-dist.d.ts  tsconfig.codecept.json  tsconfig.json  tsconfig.vitest.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: base.css
frontend/src/components/: ComponentWithDefaultProp.vue  HelloWorld.vue  ItemSidebar.vue  NotFound.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  counter.ts  dummy.ts  interfaces.ts  module.ts  pipeline.ts
frontend/src/utils/: conditionHelper.ts  networkHelper.ts
frontend/src/utils/__tests__/: networkHelper.spec.ts  utils.spec.ts
frontend/src/views/: HomeView.vue  LoginView.vue
frontend/tests/: login_test.ts  questioncondition_test.ts  tsconfig.json
frontend/tests/typing/: steps.d.ts
nginx/: Dockerfile  nginx.conf
nginx/nginxconfig.io/: security.conf
nginx/sites-enabled/: app.conf
pgbouncer/: Dockerfile  entrypoint.sh
