[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
atomic = true
src_paths = ["api"]
extend_skip = ["backend", "api/migrations", ".idea"]

[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Martin Boos <mboos@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
django-cors-headers = "^3.11.0"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pre-commit = "^2.19.0"
isort = "^5.10.1"
certifi = "^2021.10.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
